Update and rename Loco mosquito 4.0.ipynb to Loco mosquito 4.1.ipynb
This change proposes 3 modifications:
  - To use tqdm to add in a progress bar for the long process of loading in the spectra.
  - To modify reading in the spectra to include the country. In addition, to propagate the change through shifting the position of the spectrum in the matrix to accommodate the new country information.
  - To add in sub totals in the mosquito number summaries.

--- a/Loco mosquito 4.1.ipynb
+++ b/Loco mosquito 4.1.ipynb
@@ -33,7 +33,10 @@
     "    3.3 - Deals with errors in the dates of the mosquitoes.\n",
     "    4.0 - Ignores the name of the ``*.tmp`` file inside the ``*.mzz`` file.\n",
     "        - Discriminates between the rearing conditions of the mosquitoes.\n",
-    "        - Includes an algorithm to select what mosquitoes you want to use in the final matrix."
+    "        - Includes an algorithm to select what mosquitoes you want to use in the final matrix.\n",
+    "    4.1 - Added in tqdm to make use of a progress bar during the long phase of loading in spectra.\n",
+    "        - Modified reading the spectra to include the country. Further changes throughout shift the spectra position in the matricies to accomodate the country matrix location.\n",
+    "        - Added in a sub total in the mosquito number summary display."
    ]
   },
   {
@@ -65,7 +68,8 @@
     "import csv\n",
     "import matplotlib.pyplot as plt\n",
     "import zipfile\n",
-    "import zlib"
+    "import zlib\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -175,9 +179,10 @@
     "list_status = []\n",
     "list_species = []\n",
     "list_rear = []\n",
+    "list_country = []\n",
     "wrong_named = []\n",
     "# Now we load the spectra in a matrix\n",
-    "for i in spectra_names:\n",
+    "for i in tqdm(spectra_names):\n",
     "    # To obtain the info from the name of the file, first we split the name in the different sections:\n",
     "    tmp = os.path.basename(i).split(\".\")[0].split(\" \")[0].split(\"-\")\n",
     "    # The first part in all the naming systems is always the species\n",
@@ -192,10 +197,15 @@
     "        pass\n",
     "    else:\n",
     "        list_species.append(species)\n",
-    "    # And then we move to the age\n",
+    "    # And then we move to the country, then age\n",
     "    j += 1\n",
-    "    # If there is the country code, we move to the next part\n",
+    "    # If there is the country code, add it\n",
     "    if len(tmp[j]) <= 2:\n",
+    "        country = tmp[j]\n",
+    "        if country in list_country:\n",
+    "            pass\n",
+    "        else:\n",
+    "            list_country.append(country)\n",
     "        j += 1\n",
     "    # And because there is always somebody that forgets to add the 0 in the ages smaller than 10 days...\n",
     "    if len(tmp[j]) == 2:\n",
@@ -279,10 +289,11 @@
     "        end = spectrum[1]\n",
     "        ls = int(spectrum[2])\n",
     "        spectrum = spectrum[3:]\n",
-    "    matrix.append([species,age,status,rear,stime,[start,end,ls],spectrum])\n",
+    "    matrix.append([species,age,status,country,rear,stime,[start,end,ls],spectrum])\n",
     "list_species = sorted(list_species)\n",
     "list_ages = sorted(list_ages)\n",
     "list_status = sorted(list_status)\n",
+    "list_country = sorted(list_country)\n",
     "list_rear = sorted(list_rear)\n",
     "b = time.time()\n",
     "print(\"This last process has lasted \" + str(round(b-a,3)) + \" s. \" + str(len(wrong_named)) + \" files were not read because their name\")"
@@ -321,14 +332,20 @@
     "for j in range(len(list_rear)):\n",
     "    mos_acc.append(np.zeros((len(list_species),len(list_status),len(list_ages)),dtype=int)) # We create an empty table for the \n",
     "    for i in range(len(matrix)):\n",
-    "        if matrix[i][3] == list_rear[j]:\n",
+    "        if matrix[i][4] == list_rear[j]:\n",
     "            x = list_species.index(matrix[i][0])\n",
     "            y = list_status.index(matrix[i][2])\n",
     "            z = list_ages.index(matrix[i][1])\n",
     "            mos_acc[j][x][y][z] += 1\n",
     "            \n",
+    "mos_acc_2 = [np.zeros((3,3)) for i in range(3)]\n",
+    "for i in range(len(mos_acc)):\n",
+    "    for j in range(mos_acc[0].shape[0]):\n",
+    "        for k in range(mos_acc[0].shape[1]):\n",
+    "            mos_acc_2[i][j][k] = np.sum(mos_acc[i][j][k])\n",
+    "\n",
     "# We show it in a beautiful way\n",
-    "width = ((len(list_ages) + 1) * 5) - 2\n",
+    "width = ((len(list_ages) + 2) * 5) - 2\n",
     "print()\n",
     "for j in range(len(list_rear)):\n",
     "    if list_rear[j] == \"TF\":\n",
@@ -341,11 +358,12 @@
     "    for i in range(mos_acc[j].shape[0]):\n",
     "        print(\" \" * (round(width/2) -2) + list_species[i])\n",
     "        print(\"=\" * width)\n",
-    "        print(\"    \"+'   '.join(map(str, list_ages))) \n",
+    "        print(\"    \"+'   '.join(map(str, list_ages))+\"  \"+'Total') \n",
     "        print(\"-\" * width)\n",
     "        for k in range(mos_acc[j].shape[1]):\n",
-    "            print(list_status[k] + \" \" + \"  \".join([\"%3.0f\" % dx for dx in mos_acc[j][i][k]]))\n",
+    "            print(list_status[k] + \" \" + \"  \".join([\"%3.0f\" % dx for dx in mos_acc[j][i][k]]) + \"   \" + \"\".join(\"%3.0f\" % mos_acc_2[j][i][k]))\n",
     "        print()\n",
+    "        print(('Total '+list_species[i]+' : '+str(np.sum(mos_acc_2[j][i]))))\n",
     "    print(\" \" * width + \"Total: \" + str(np.sum(mos_acc[j])))\n",
     "    print()"
    ]
@@ -381,17 +399,17 @@
     "bad_spectra = []\n",
     "for i in range(len(matrix)):\n",
     "    # first we calculate the position of the points that comprise that section of the spectrum\n",
-    "    if matrix[i][5][1] < 600 and matrix[i][5][1] > 400:\n",
-    "        sta = int(round((((matrix[i][5][2] - 1) / (matrix[i][5][1] - matrix[i][5][0])) * (600 - matrix[i][5][0])) + 1)) - 1\n",
-    "        end = matrix[i][5][2]\n",
-    "    elif matrix[i][5][1] <= 400:\n",
-    "        sta = int(round((((matrix[i][5][2] - 1) / (matrix[i][5][1] - matrix[i][5][0])) * (600 - matrix[i][5][0])) + 1)) - 1\n",
-    "        end = int(round((((matrix[i][5][2] - 1) / (matrix[i][5][1] - matrix[i][5][0])) * (400 - matrix[i][5][0])) + 1)) - 1\n",
+    "    if matrix[i][6][1] < 600 and matrix[i][6][1] > 400:\n",
+    "        sta = int(round((((matrix[i][6][2] - 1) / (matrix[i][6][1] - matrix[i][6][0])) * (600 - matrix[i][6][0])) + 1)) - 1\n",
+    "        end = matrix[i][6][2]\n",
+    "    elif matrix[i][6][1] <= 400:\n",
+    "        sta = int(round((((matrix[i][6][2] - 1) / (matrix[i][6][1] - matrix[i][6][0])) * (600 - matrix[i][6][0])) + 1)) - 1\n",
+    "        end = int(round((((matrix[i][6][2] - 1) / (matrix[i][6][1] - matrix[i][6][0])) * (400 - matrix[i][6][0])) + 1)) - 1\n",
     "    else:\n",
     "        sta = 0 # if the spectrum doesn't reach 600 cm-1 we cannot prove if the spectrum has enough intensity\n",
     "        raise Exception(\"The spectrum {} doesn't reach 600 cm-1\".format(spectra_names[1]))\n",
     "    # Now we check the intensity of the spectra in that region. If is not over 0.1 we discard the spectrum\n",
-    "    if np.average(matrix[i][6][sta:end]) < 0.11:\n",
+    "    if np.average(matrix[i][7][sta:end]) < 0.11:\n",
     "        bad_spectra.append(\"LI: \" + spectra_names[i])\n",
     "        matrix[i] = None\n",
     "if (bad_spectra) == 1:\n",
@@ -440,10 +458,10 @@
     "for i in range(len(matrix)):\n",
     "    if matrix[i]: #to check if we have spectra\n",
     "        # Now one would spect that the spectrum will reach 3900 so the program will not check it out.\n",
-    "        sta = int(round((((matrix[i][5][2] - 1) / (matrix[i][5][1] - matrix[i][5][0])) * (3900 - matrix[i][5][0])) + 1)) - 1\n",
-    "        end = int(round((((matrix[i][5][2] - 1) / (matrix[i][5][1] - matrix[i][5][0])) * (3500 - matrix[i][5][0])) + 1)) - 1\n",
+    "        sta = int(round((((matrix[i][6][2] - 1) / (matrix[i][6][1] - matrix[i][6][0])) * (3900 - matrix[i][6][0])) + 1)) - 1\n",
+    "        end = int(round((((matrix[i][6][2] - 1) / (matrix[i][6][1] - matrix[i][6][0])) * (3500 - matrix[i][6][0])) + 1)) - 1\n",
     "        # we take that data:\n",
-    "        yd = matrix[i][6][sta:end]\n",
+    "        yd = matrix[i][7][sta:end]\n",
     "        xd = list(range(len(yd)))\n",
     "        rs = rs_pf(xd,yd,5)\n",
     "        # And now, if the fitting is bad, we discard the spectrum\n",
@@ -486,14 +504,14 @@
     "for i in range(len(matrix)):\n",
     "    if matrix[i]: #to check if we have spectra\n",
     "        # Now one would spect that the spectrum will reach 3900 so the program will not check it out.\n",
-    "        sta = int(round((((matrix[i][5][2] - 1) / (matrix[i][5][1] - matrix[i][5][0])) * (1900 - matrix[i][5][0])) + 1)) - 1\n",
-    "        li.append(matrix[i][6][sta])\n",
+    "        sta = int(round((((matrix[i][6][2] - 1) / (matrix[i][6][1] - matrix[i][6][0])) * (1900 - matrix[i][6][0])) + 1)) - 1\n",
+    "        li.append(matrix[i][7][sta])\n",
     "q3, q1 = np.percentile(li, [75 ,25])\n",
     "ir = q3 - q1\n",
     "for i in range(len(matrix)):\n",
     "    if matrix[i]: #to check if we have spectra\n",
-    "        sta = int(round((((matrix[i][5][2] - 1) / (matrix[i][5][1] - matrix[i][5][0])) * (1900 - matrix[i][5][0])) + 1)) - 1\n",
-    "        if matrix[i][6][sta] > (l * ir + q3) or matrix[i][6][sta] < (q1 - l * ir):\n",
+    "        sta = int(round((((matrix[i][6][2] - 1) / (matrix[i][6][1] - matrix[i][6][0])) * (1900 - matrix[i][6][0])) + 1)) - 1\n",
+    "        if matrix[i][7][sta] > (l * ir + q3) or matrix[i][7][sta] < (q1 - l * ir):\n",
     "            bs +=1\n",
     "            bad_spectra.append(\"SA: \" + spectra_names[i])\n",
     "            matrix[i] = None \n",
@@ -521,11 +539,17 @@
     "    mos_acc.append(np.zeros((len(list_species),len(list_status),len(list_ages)),dtype=int)) # We create an empty table for the \n",
     "    for i in range(len(matrix)):\n",
     "        if matrix[i]:\n",
-    "            if matrix[i][3] == list_rear[j]:\n",
+    "            if matrix[i][4] == list_rear[j]:\n",
     "                x = list_species.index(matrix[i][0])\n",
     "                y = list_status.index(matrix[i][2])\n",
     "                z = list_ages.index(matrix[i][1])\n",
     "                mos_acc[j][x][y][z] += 1\n",
+    "            \n",
+    "mos_acc_2 = [np.zeros((3,3)) for i in range(3)]\n",
+    "for i in range(len(mos_acc)):\n",
+    "    for j in range(mos_acc[0].shape[0]):\n",
+    "        for k in range(mos_acc[0].shape[1]):\n",
+    "            mos_acc_2[i][j][k] = np.sum(mos_acc[i][j][k])\n",
     "            \n",
     "# We show it in a beautiful way\n",
     "width = ((len(list_ages) + 1) * 5) - 2\n",
@@ -546,6 +570,7 @@
     "        for k in range(mos_acc[j].shape[1]):\n",
     "            print(list_status[k] + \" \" + \"  \".join([\"%3.0f\" % dx for dx in mos_acc[j][i][k]]))\n",
     "        print()\n",
+    "        print(('Total '+list_species[i]+' : '+str(np.sum(mos_acc_2[j][i]))))\n",
     "    print(\" \" * width + \"Total: \" + str(np.sum(mos_acc[j])))\n",
     "    print()"
    ]
@@ -570,7 +595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wns = [3855, 3400, 3275, 2922, 2853, 1900, 1745, 1635, 1539, 1457, 1306, 1154, 1076, 1027, 880, 525]"
+    "wns = [3800, 550]"
    ]
   },
   {
@@ -594,8 +619,8 @@
     "b = []\n",
     "for i in range(len(matrix)):\n",
     "    if matrix[i]:\n",
-    "        a.append(matrix[i][5][0])\n",
-    "        b.append(matrix[i][5][1])\n",
+    "        a.append(matrix[i][6][0])\n",
+    "        b.append(matrix[i][6][1])\n",
     "a = max(a)\n",
     "b = min(b)\n",
     "\n",
@@ -646,11 +671,11 @@
     "    n = np.random.randint(0,len(matrix)-1)\n",
     "\n",
     "# we prepare the data\n",
-    "a = matrix[n][5][0]\n",
-    "b = matrix[n][5][1]\n",
-    "c = matrix[n][5][2]\n",
+    "a = matrix[n][6][0]\n",
+    "b = matrix[n][6][1]\n",
+    "c = matrix[n][6][2]\n",
     "xd = [a - x/c * (a-b) for x in range(c)]\n",
-    "yd = matrix[n][6]\n",
+    "yd = matrix[n][7]\n",
     "\n",
     "# we draw the plot\n",
     "plt.figure(figsize=(14,7))\n",
@@ -698,7 +723,8 @@
     "sel_species = \"all\"\n",
     "sel_ages = \"all\"\n",
     "sel_status = \"all\"\n",
-    "sel_rear = [\"TF\"]"
+    "sel_country = \"all\"\n",
+    "sel_rear = \"all\"#\"VF\"#[\"TF\", \"TL\"]"
    ]
   },
   {
@@ -723,10 +749,10 @@
     "# If we have selected a range of wavenumbers, now it is time to change it into discrete wavenumbers\n",
     "if len(wns) == 2 and einselechta == False:\n",
     "    resolution = 2\n",
-    "    if matrix[0][5][0] < wns[0]:\n",
-    "        wns[0] = int(matrix[0][5][0])\n",
-    "    if matrix[0][5][1] > wns[-1]:\n",
-    "        wns[-1] = int(matrix[0][5][-1])+1\n",
+    "    if matrix[0][6][0] < wns[0]:\n",
+    "        wns[0] = int(matrix[0][6][0])\n",
+    "    if matrix[0][6][1] > wns[-1]:\n",
+    "        wns[-1] = int(matrix[0][6][-1])+1\n",
     "    wns = list(range(wns[0],wns[1],-resolution))\n",
     "    \n",
     "# And start the algorithm to extract the info\n",
@@ -740,23 +766,25 @@
     "            sel_ages = list_ages\n",
     "        if sel_status == \"all\" or sel_status == \"All\" or sel_status == \"ALL\":\n",
     "            sel_status = list_status\n",
+    "        if sel_country == \"all\" or sel_country == \"All\" or sel_country == \"ALL\":\n",
+    "            sel_country = list_country\n",
     "        if sel_rear == \"all\" or sel_rear == \"All\" or sel_rear == \"ALL\":\n",
     "            sel_rear = list_rear\n",
-    "        if i[0] in sel_species and i[1] in sel_ages and i[2] in sel_status and i[3] in sel_rear:\n",
+    "        if i[0] in sel_species and i[1] in sel_ages and i[2] in sel_status and i[3] in sel_country and i[4] in sel_rear:\n",
     "            # we count the number of spectra that are removed because are too short for the range of wavenumbers selected\n",
-    "            if i[5][0] >= wns[0] and i[5][1] <= wns[-1]:\n",
+    "            if i[6][0] >= wns[0] and i[6][1] <= wns[-1]:\n",
     "                pos = []\n",
     "                for j in wns:\n",
-    "                    pos.append(int(round((((i[5][2] - 1) / (i[5][1] - i[5][0])) * (j - i[5][0])) + 1)) - 1)\n",
+    "                    pos.append(int(round((((i[6][2] - 1) / (i[6][1] - i[6][0])) * (j - i[6][0])) + 1)) - 1)\n",
     "                lint = []\n",
     "                for k in pos:\n",
-    "                    lint.append(i[6][k])\n",
-    "                fida.append([i[0], i[1], i[2],i[3], str(int(i[4]))] + lint)\n",
+    "                    lint.append(i[7][k])\n",
+    "                fida.append([i[0], i[1], i[2], i[3], i[4], str(int(i[5]))] + lint)\n",
     "                ssel += 1\n",
     "            else:\n",
     "                csc += 1\n",
     "fida = sorted(fida)\n",
-    "fida.insert(0,[\"Species\", \"Age\", \"Status\", \"RearCnd\", \"StoTime\"] + wns)\n",
+    "fida.insert(0,[\"Species\", \"Age\", \"Status\", \"Country\", \"RearCnd\", \"StoTime\"] + wns)\n",
     "if (csc) == 0:\n",
     "    pass\n",
     "elif (csc) == 1:\n",
@@ -787,7 +815,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(spectra_path + \"mosquitos.dat\", 'w') as file:\n",
+    "with open(spectra_path + \"mosquitos_country.dat\", 'w') as file:\n",
     "    sc = csv.writer(file, delimiter='\\t')\n",
     "    for i in fida:\n",
     "            sc.writerow(i)"
@@ -810,7 +838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
