Update Loco mosquito 4.1.ipynb

--- a/Loco mosquito 4.1.ipynb
+++ b/Loco mosquito 4.1.ipynb
@@ -36,7 +36,8 @@
     "        - Includes an algorithm to select what mosquitoes you want to use in the final matrix.\n",
     "    4.1 - Added in tqdm to make use of a progress bar during the long phase of loading in spectra.\n",
     "        - Modified reading the spectra to include the country. Further changes throughout shift the spectra position in the matricies to accomodate the country matrix location.\n",
-    "        - Added in a sub total in the mosquito number summary display."
+    "        - Added in a sub total in the mosquito number summary display.\n",
+    "    4.2 - Solved some bugs that affected the code (and Ifakara)."
    ]
   },
   {
@@ -338,7 +339,7 @@
     "            z = list_ages.index(matrix[i][1])\n",
     "            mos_acc[j][x][y][z] += 1\n",
     "            \n",
-    "mos_acc_2 = [np.zeros((3,3)) for i in range(3)]\n",
+    "mos_acc_2 = [np.zeros((len(list_species),len(list_status))) for i in range(3)]\n",
     "for i in range(len(mos_acc)):\n",
     "    for j in range(mos_acc[0].shape[0]):\n",
     "        for k in range(mos_acc[0].shape[1]):\n",
@@ -363,7 +364,7 @@
     "        for k in range(mos_acc[j].shape[1]):\n",
     "            print(list_status[k] + \" \" + \"  \".join([\"%3.0f\" % dx for dx in mos_acc[j][i][k]]) + \"   \" + \"\".join(\"%3.0f\" % mos_acc_2[j][i][k]))\n",
     "        print()\n",
-    "        print(('Total '+list_species[i]+' : '+str(np.sum(mos_acc_2[j][i]))))\n",
+    "        print(('Total '+list_species[i]+' : '+str(\"%3.0f\" % np.sum(mos_acc_2[j][i]))))\n",
     "    print(\" \" * width + \"Total: \" + str(np.sum(mos_acc[j])))\n",
     "    print()"
    ]
@@ -472,7 +473,7 @@
     "if (bs) == 1:\n",
     "    print(\"1 spectrum has been discarded because has atmospheric interferences\")\n",
     "else:\n",
-    "    print(str(bs) + \" spectra have been discarded because have atmospheric interferences\")   "
+    "    print(str(bs) + \" spectra have been discarded because have atmospheric interferences\") "
    ]
   },
   {
@@ -518,7 +519,7 @@
     "if (bs) == 1:\n",
     "    print(\"1 spectrum has been discarded because it was distorted by the anvil\")\n",
     "else:\n",
-    "    print(str(bs) + \" spectra have been discarded because they were distorted by the anvil\")  "
+    "    print(str(bs) + \" spectra have been discarded because they were distorted by the anvil\")"
    ]
   },
   {
@@ -545,7 +546,7 @@
     "                z = list_ages.index(matrix[i][1])\n",
     "                mos_acc[j][x][y][z] += 1\n",
     "            \n",
-    "mos_acc_2 = [np.zeros((3,3)) for i in range(3)]\n",
+    "mos_acc_2 = [np.zeros((len(list_species),len(list_status))) for i in range(3)]\n",
     "for i in range(len(mos_acc)):\n",
     "    for j in range(mos_acc[0].shape[0]):\n",
     "        for k in range(mos_acc[0].shape[1]):\n",
@@ -570,7 +571,7 @@
     "        for k in range(mos_acc[j].shape[1]):\n",
     "            print(list_status[k] + \" \" + \"  \".join([\"%3.0f\" % dx for dx in mos_acc[j][i][k]]))\n",
     "        print()\n",
-    "        print(('Total '+list_species[i]+' : '+str(np.sum(mos_acc_2[j][i]))))\n",
+    "        print(('Total '+list_species[i]+' : '+str(\"%3.0f\" % np.sum(mos_acc_2[j][i]))))\n",
     "    print(\" \" * width + \"Total: \" + str(np.sum(mos_acc[j])))\n",
     "    print()"
    ]
@@ -595,7 +596,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wns = [3800, 550]"
+    "wns = [3855, 3400, 3275, 2922, 2853, 1900, 1745, 1635, 1539, 1457, 1306, 1154, 1076, 1027, 880, 525]"
    ]
   },
   {
@@ -648,8 +649,7 @@
     "        while wns[-1] < b:\n",
     "            wns.pop()\n",
     "            if len(wns) == 1:\n",
-    "                wns.append(int(b))\n",
-    "        "
+    "                wns.append(int(b))   "
    ]
   },
   {
@@ -724,7 +724,7 @@
     "sel_ages = \"all\"\n",
     "sel_status = \"all\"\n",
     "sel_country = \"all\"\n",
-    "sel_rear = \"all\"#\"VF\"#[\"TF\", \"TL\"]"
+    "sel_rear = [\"TF\"]"
    ]
   },
   {
@@ -740,6 +740,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "wns[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(matrix[1500])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# We start the timer\n",
     "a = time.time()\n",
     "# We define the variable that will contain the final data\n",
@@ -747,16 +765,21 @@
     "csc = 0\n",
     "ssel = 0\n",
     "# If we have selected a range of wavenumbers, now it is time to change it into discrete wavenumbers\n",
+    "# First, we look for the boundaries of the data\n",
+    "for i in range(len(matrix)):\n",
+    "    if matrix[i]:\n",
+    "        kk = i\n",
+    "        break\n",
     "if len(wns) == 2 and einselechta == False:\n",
     "    resolution = 2\n",
-    "    if matrix[0][6][0] < wns[0]:\n",
-    "        wns[0] = int(matrix[0][6][0])\n",
-    "    if matrix[0][6][1] > wns[-1]:\n",
-    "        wns[-1] = int(matrix[0][6][-1])+1\n",
+    "    if matrix[kk][6][0] < wns[0]:\n",
+    "        wns[0] = int(matrix[kk][6][0])\n",
+    "    if matrix[kk][6][1] > wns[-1]:\n",
+    "        wns[-1] = int(matrix[kk][6][-1])+1\n",
     "    wns = list(range(wns[0],wns[1],-resolution))\n",
     "    \n",
     "# And start the algorithm to extract the info\n",
-    "for i in matrix:\n",
+    "for i in tqdm(matrix):\n",
     "    # If that item exist\n",
     "    if i:\n",
     "        # If the item has the selected characteristics\n",
@@ -838,7 +861,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
